--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 home-title: Samaritan Manasseh
 description: For God, said he, hath made me forget all my toil.
-header-img: https://cdn.rspstudio.cn/image/blogassets/banner.jpg
+header-img: https://source.unsplash.com/random
 ---
 
 {% include header.html %}
